@@ -1,0 +1,8 @@
+#ifndef _CFG_H_
+#define _CFG_H_
+
+#include "main.h"
+
+extern int read_cfg(cpe_kpi_emu_ctx_t *ctx, const char *filename);
+
+#endif /* ifndef _CFG_H_ */
