@@ -1,3 +1,10 @@
+2013-12-16 v1.1.0.6:
+	* cfg.c:	Initial version.
+	* main.c:	Use configuration file, remove some cmd parameters.
+				Support backup directory configuration.
+				Add permit_to_run() to check running parameters and environment.
+	* main.h:	Rename uld_intval -> interval.
+
 2013-12-16 v1.0.3.5:
 	* uld.c:	[BUG] Debug information format error.
 
